Add account page
https://trello.com/c/6AyMCv1t

--- a/app/views/shared/_header.haml
+++ b/app/views/shared/_header.haml
@@ -4,6 +4,8 @@
     %ul.nav
       %li
         = link_to 'Repos', root_path
+      %li
+        = link_to "Account", "/account"
       %li.dropdown
         %input#account-menu-toggle{type: 'checkbox'}
         %label.toggle{for: 'account-menu-toggle'} #{current_user}
