Show payment dialog when activating a private repo

--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -2,3 +2,5 @@
 
 .repo-listing{ 'repo-list' => '' }
 = render 'preload_template', template: 'repo_list'
+
+= render 'preload_template', template: 'payment_form'
