--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -6,6 +6,7 @@
     %link{ href: '//fonts.googleapis.com/css?family=Lato:300,400,700,900', rel: 'stylesheet', type:'text/css' }
     = stylesheet_link_tag    'application', :media => 'all'
     = javascript_include_tag 'application'
+    = javascript_include_tag 'https://js.stripe.com/v2/'
     = csrf_meta_tags
   %body
     - flash.each do |key, value|
