--- a/app/views/templates/repo.haml
+++ b/app/views/templates/repo.haml
@@ -1,6 +1,9 @@
 %a.toggle{'href' => '', 'ng-click' => 'toggle()'}
 %span.name {{ repo.full_github_name }}
-#div{ 'ng-show' => 'showPaymentForm()' }
+.payment-form{ 'ng-show' => 'showPaymentForm()' }
+  #h2
+    ${{ repo.price }}
+
   = form_tag do
     = label_tag :card_number, 'Card Number'
     = text_field_tag :card_number, nil, 'ng-model' => 'cardNumber'
