--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -16,6 +16,12 @@
     .content
       = yield
 
-    = yield :javascript
+    = javascript_tag do
+      = yield :javascript
+
+      - if Rails.env.test?
+        = raw Rails.root.join('spec/support/fake_stripe.js').read
+        $.ajaxSetup({ async: false });
+
     - if analytics?
       = render 'segment_io'
